tests/ui/traits/next-solver/coherence/trait_ref_is_knowable-norm-overflow.stderr
error[E0119]: conflicting implementations of trait `Trait` for type `<LocalTy as Overflow>::Assoc`
  --> $DIR/trait_ref_is_knowable-norm-overflow.rs:18:1
   |
LL | impl<T: Copy> Trait for T {}
   | ------------------------- first implementation here
LL | struct LocalTy;
LL | impl Trait for <LocalTy as Overflow>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `<LocalTy as Overflow>::Assoc`

error[E0275]: overflow evaluating the requirement `<T as Overflow>::Assoc: Sized`
  --> $DIR/trait_ref_is_knowable-norm-overflow.rs:10:18
   |
LL |     type Assoc = <T as Overflow>::Assoc;
   |                  ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`trait_ref_is_knowable_norm_overflow`)
note: required by a bound in `Overflow::Assoc`
  --> $DIR/trait_ref_is_knowable-norm-overflow.rs:7:5
   |
LL |     type Assoc;
   |     ^^^^^^^^^^^ required by this bound in `Overflow::Assoc`
help: consider relaxing the implicit `Sized` restriction
   |
LL |     type Assoc: ?Sized;
   |               ++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0275.
For more information about an error, try `rustc --explain E0119`.
